[tool.poetry]
name = "guardrails-ai"
version = "0.5.13"
description = "Adding guardrails to large language models."
authors = ["Guardrails AI <contact@guardrailsai.com>"]
license = "Apache License 2.0"
homepage = "https://www.guardrailsai.com/"
documentation = "https://www.guardrailsai.com/docs"
readme = "README.md"
packages = [
    { include = "guardrails", from = "." }
]

[tool.poetry.scripts]
guardrails = "guardrails.cli:cli"

[tool.poetry.dependencies]
python = "^3.9"
lxml = "^4.9.3"
openai = "^1.30.1"
rich = "^13.6.0"
pydantic = ">=2.0.0, <3.0"
typer = {extras = ["all"],  version = ">=0.9.0, <0.13"}
griffe = "^0.36.9"
tenacity = ">=8.1.0"
regex = "^2023.10.3"
rstr = "^3.2.2"
typing-extensions = "^4.8.0"
python-dateutil = "^2.8.2"
tiktoken = ">=0.5.1"
nltk = ">3.0, <=3.8.1"
litellm = "^1.37.14"
sqlvalidator = {version = "^0.0.20", optional = true}
sqlalchemy = {version = ">=2.0.9", optional = true}
sqlglot = {version = "^19.0.3", optional = true}
faiss-cpu = {version = "^1.7.4", optional = true}
numpy = {version = ">=1.25, <2.0", optional = true}
manifest-ml = {version = "^0.1.8", optional = true}
transformers = {version = "^4.38.0", optional = true}
anthropic = {version = "^0.7.2", optional = true}
torch = {version = "^2.1.1", optional = true}
nbdoc = {version = "^0.0.82", optional = true}
pydash = "^7.0.6"
docspec_python = "2.2.1"
pydoc-markdown = "4.8.2"
langchain-core = ">=0.1,<0.4"
coloredlogs = "^15.0.1"
requests = "^2.31.0"
faker = "^25.2.0"
jsonref = "^1.1.0"
jsonformer = {version = "0.12.0", optional = true}
jsonschema = {version = "^4.22.0", extras = ["format"]}
pip = ">=22"
pyjwt = "^2.8.0"
opentelemetry-sdk = "^1.24.0"
opentelemetry-exporter-otlp-proto-grpc = "^1.24.0"
opentelemetry-exporter-otlp-proto-http = "^1.24.0"
guardrails-hub-types = "^0.0.4"
guardrails-api-client = ">=0.3.13"
diff-match-patch = "^20230430"
guardrails-api = ">=0.0.1"
mlflow = {version = ">=2.0.1", optional = true}
uvloop = {version = "^0.20.0", optional = true}
semver = "^3.0.2"

[tool.poetry.extras]
sql = ["sqlvalidator", "sqlalchemy", "sqlglot"]
vectordb = ["faiss-cpu", "numpy"]
manifest = ["manifest-ml"]
anthropic = ["anthropic"]
docs-build = ["nbdoc", "docspec_python", "pydoc-markdown"]
huggingface = ["transformers", "torch", "jsonformer"]
api = ["guardrails-api"]
databricks = ["mlflow"]
uv = ["uvloop"]


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pytest-asyncio = "^0.21.1"
docformatter = ">=1.4"
pytest-cov = ">=2.10.1"
pre-commit = ">=2.9.3"
twine = "^4.0.2"
pytest-mock = "^3.12.0"
pypdfium2 = "^4.23.1"
pyright = "1.1.334"
lxml-stubs = "^0.4.0"
ruff = ">=0.4.1"

[tool.poetry.group.api]
optional = true

[tool.poetry.group.api.dependencies]
guardrails-api = ">=0.0.0a0"

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
mkdocs = "^1.5.3"
mkdocstrings = {extras = ["python"], version = "^0.23.0"}
mkdocs-jupyter = ">=0.23"
mkdocs-material = "^9.4.8"
mknotebooks = "^0.8.0"
griffe = "^0.36.9"
pillow = "^10.1.0"
cairosvg = "^2.7.1"
mkdocs-glightbox = "^0.3.4"


[[tool.poetry.source]]
name = "PyPI"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "E501"]
ignore = ["E731", "E203", "E741"]

[tool.pytest.ini_options]
python_classes = ["Test"]
python_functions = ["test_"]
python_files = ["test_*.py"]
testpaths = ["tests"]
markers = [
    "no_hub_telemetry_mock"
]

[pytest]
log_cli = "True"
log_cli_level = "DEBUG"
